css/main.css
html, body, div, span, iframe, h1, h2, h3, h4, h5, h6, p, pre, a, address, code, em, img, q, s, strong, b, u, i, center, ol, ul, li, form, label, table, tbody, tr, th, td, article, details, embed, footer, header, nav, section, time, video {
  margin: 0;
  padding: 0;
  border: 0;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
}

html {
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
  width: 100%;
  height: 100%;
}

*, *:before, *:after {
  -webkit-box-sizing: inherit;
  -moz-box-sizing: inherit;
  box-sizing: inherit;
}

article, details, footer, header, nav, section {
  display: block;
}

body {
  font-family: 'HelveticaNeue', Helvetica, Arial, sans-serif;
  font-size: 15px;
  line-height: 1.8667em;
  color: #8D8E90;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  background: #1C1D21 url("../img/bg-static.png") no-repeat;
  background-attachment: fixed;
  background-position: center center;
  height: 100%;
}

p {
  text-align: justify;
}

ul {
  list-style: none;
}

q {
  quotes: none;
}

q:before,q:after {
  content: '';
  content: none;
}

table {
  border-collapse: collapse;
  border-spacing: 0;
}

img {
  max-width: 100%;
  height: auto;
  vertical-align: middle;
}

@font-face {
  font-family: 'HelveticaNeue';
  src: url('../fonts/HelveticaNeue.ttf');
  src: url('../fonts/HelveticaNeue.otf');
}

@font-face {
  font-family: 'HelveticaNeueMedium';
  src: url('../fonts/HelveticaNeueMedium.ttf');
  src: url('../fonts/HelveticaNeueMedium.otf');
}

@font-face {
  font-family: 'HelveticaNeueLight';
  src: url('../fonts/HelveticaNeueLight.ttf');
  src: url('../fonts/HelveticaNeueLight.otf');
}

@font-face {
  font-family: 'SourceCodePro';
  src: url('../fonts/SourceCodePro-Regular.otf');
}

.custom-blue {
  color: #41B6E6;
}

.custom-darker-blue {
  color: #003c54;
}

/* General Containers */

.container {
  padding: 0 30px;
  margin: 0 auto;
}

@media screen and (min-width: 960px) {
  .container {
    width: 100%;
    max-width: 930px;
  }
}

.col-4 {
  width: 33.33%;
  float: left;
}

.col-8 {
  width: 66.66%;
  float: left;
}

.flex-center {
  display: flex;
  align-items: center;
  justify-content: center;
}

.clearfix:after {
  content: ".";
  display: block;
  clear: both;
  visibility: hidden;
  line-height: 0 !important;
  height: 0;
}

/* General Text */

h1, h2, h3, h4, h5 {
  font-family: 'HelveticaNeueLight';
  color: #ffffff;
}

h2 {
  font-family: 'SourceCodePro';
}

h1 {
  font-family: 'SourceCodePro';
  font-size: 43px;
  line-height: 120%;
}

h2 {
  font-size: 26px;
}

h3 {
  font-size: 20px;
}

h4 {
  font-size: 18px;
}

h5 {
  font-size: 16px;
}

a {
  text-decoration: none;
}

a:hover {
  text-decoration: none;
}

strong {
  color: #fff;
  font-weight: bold;
}

.text-center {
  text-align: center;
}

.text-left {
  text-align: left;
}

.text-right {
  text-align: right;
}

.cta {
  font-family: 'HelveticaNeueMedium';
  background: rgba(0, 0, 0, 0.25);
  border: 1px solid #FFFFFF;
  border-radius: 2px;
  text-transform: uppercase;
  font-size: 14px;
  color: #FFFFFF;
  width: 196px;
  text-align: center;
  display: inline-block;
  height: 48px;
  line-height: 48px;
  padding: 0;
  cursor: pointer;
  transition: all 0.3s linear;
}

.cta:hover {
  box-shadow: 0 0 5px 2px rgba(65,182,230,0.5);
}

.cta:focus {
  outline: none;
}

.modal .modal-body .cta.cta-modal {
  width: 100%;
}

.header {
  transition: all 0.2s linear;
  padding: 40px 0;
}

.header .logo {
  float: left;
}

.header .logo a {
  display: inline-block;
  line-height: normal;
}

.header .logo a img {
  height: 45px;
}

.header .navigation {
  float: right;
}

.header .navigation ul li {
  display: inline-block;
  margin-left: 15px;
}

.header .navigation ul li a {
  display: block;
  color: #F2F2F2;
  font-family: 'SourceCodePro';
}

.header .align-center {
  height: 50px;
  line-height: 50px;
}

.header.sticky-header {
  position: fixed;
  width: 100%;
  z-index: 9;
}

.header.header-animate {
  background: rgba(65, 182, 230, 0.8);
  padding: 10px 0;
}

.introduction-banner {
  background-color: rgba(65,182,230,0.1);
  background-size: cover;
  background-position: center center;
  height: 100vh;
  min-height: 700px;
}

.middle-content {
  /*padding-top: 132px;*/
  height: 100%;
  display: flex;
  align-items: center;
}

.middle-content img {
  /*display: block;*/
  margin: auto;
}

.middle-content img.bitnation-logo {
  width: 235px;
}

.middle-content img.bitnation-logo-name {
  width: 81px;
}

.middle-content h1 {
  margin: 35px 0 75px;
}

.middle-content .cta-group .cta {
  width: 165px;
}

.middle-content .cta-group .cta {
  margin-right: 15px;
}

.middle-content .cta-group .cta:last-child {
  margin-right: 0;
}

.bitnation-features-main {
  padding: 80px 0;
}

.bitnation-features-main .features-description p:last-child {
  margin-bottom: 20px;
}

.bitnation-features-main .features-box-main {
  margin: 55px 0 0;
}

.bitnation-features-main .features-box-main .flex-parent {
  margin-top: 50px;
}

.bitnation-features-main .features-box-main h3 {
  border-bottom: 1px solid #000;
  line-height: 0.1em;
  box-shadow: 0 1px 0 0 rgba(255, 255, 255, 0.04);
}

.bitnation-features-main .features-box-main h3 span {
  background-color: #1c1d21;
  padding: 0 15px;
}

.bitnation-features-main .features-box-main h4 {
  text-transform: uppercase;
  margin-bottom: 20px;
  text-align: center;
  letter-spacing: 0.09em;
  color: #E9E9EA;
}

.bitnation-features-main .features-box-main .line {
  height: 4px;
  width: 30px;
  margin-bottom: 20px;
  display: inline-block;
  background-color: rgba(255, 255, 255, 0.1);
}

.bitnation-features-main .features-box-main .icon-main {
  width: 64px;
  display: flex;
  align-items: center;
  justify-content: center;
  height: 64px;
  border-radius: 50%;
  background-color: #12121B;
  margin: 0 auto 10px;
}
/* ... */

